Fix case-study-link class name in CSS

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body.dark button {
 body.dark button:hover {
     background-color: #ccc;
 }
-case-study-link {
+Case-Study-link {
     color: #1c216d;
     margin-top: 15px;
     display: block;
